--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.4.0",
     "mongoose": "^7.1.1",
